quakeforge (0.5.5-0cvs20040727) frozen unstable; urgency=low

  * CVS snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Tue, 27 Apr 2004 19:39:37 -0400

quakeforge (0.5.4-2) frozen unstable; urgency=high

  * compile against libvorbis0a instead of libvorbis0 (oops)

 -- Bill Currie <bill@taniwha.org>  Mon, 21 Jul 2003 23:09:00 -0600

quakeforge (0.5.4-1) frozen unstable; urgency=high

  * New release. fixes exploitable buffer overflow in qw-server
  * add previous changlog entry :P

 -- Bill Currie <bill@taniwha.org>  Thu, 17 Jul 2003 16:30:40 -0600

quakeforge (0.5.3-1) frozen unstable; urgency=low

  * New Release.
  * add the menu file as the problems for it in 0.5.2 have been fixed

 -- Bill Currie <bill@taniwha.org>  Wed, 09 Jul 2003 15:43:00 -0600

quakeforge (0.5.2-1.1) frozen unstable; urgency=low

  * The "It is a silly place" release.
  * Fix /etc/quakeforge.conf to load the default plugin, like all the work on
    the plugins made everyone think it would work. :)

 -- Jeff Teunissen <deek@d2dc.net>  Thu, 10 Oct 2002 00:54:23 -0400

quakeforge (0.5.2-1) frozen unstable; urgency=low

  * New release.
  * This package does not contain the menu file, because it would
    seriously screw up future upgrades. This will be fixed in 0.5.3.
    If you want menus, you'll have to download them from
    www.quakeforge.net for now.

 -- Jeff Teunissen <deek@d2dc.net>  Fri,  1 Oct 2002 02:54:17 -0400

quakeforge (0.5.1-0cvs20020416) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat, 16 Apr 2002 04:07:02 -0400

quakeforge (0.5.1-0cvs20011117) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat, 17 Nov 2001 18:13:02 -0500

quakeforge (0.5.1-0cvs20011103) frozen unstable; urgency=low

  * New snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Sat,  3 Nov 2001 16:13:02 -0500

quakeforge (0.5.1-0cvs20011015) frozen unstable; urgency=low

  * New snapshot
