@@ -1,0 +1,1 @@
+usr/lib/quakeforge/plugins/snd_output_alsa.so*
