@@ -1,0 +1,18 @@
+etc/quakeforge.conf
+usr/lib/libQFcd.so.*
+usr/lib/libQFconsole.so.*
+usr/lib/libQFruamoko.so.*
+usr/lib/libQFgamecode.so.*
+usr/lib/libQFgamecode_builtins.so.*
+usr/lib/libQFgib.so.*
+usr/lib/libQFimage.so.*
+usr/lib/libQFjs.so.*
+usr/lib/libQFmodels.so.*
+usr/lib/libQFsound.so.*
+usr/lib/libQFutil.so.*
+usr/lib/quakeforge/plugins/cd_file.so*
+usr/lib/quakeforge/plugins/cd_linux.so*
+usr/lib/quakeforge/plugins/console_client.so*
+usr/lib/quakeforge/plugins/snd_output_disk.so*
+usr/lib/quakeforge/plugins/snd_render_default.so*
+usr/share/games/quake/QF
