@@ -1,11 +1,0 @@
-libQFcd 1 quakeforge-common (>= 0.5.5)
-libQFconsole 1 quakeforge-common (>= 0.5.5)
-libQFruamoko 1 quakeforge-common (>= 0.5.5)
-libQFgamecode 1 quakeforge-common (>= 0.5.5)
-libQFgamecode_builtins 1 quakeforge-common (>= 0.5.5)
-libQFgib 1 quakeforge-common (>= 0.5.5)
-libQFimage 1 quakeforge-common (>= 0.5.5)
-libQFjs 1 quakeforge-common (>= 0.5.5)
-libQFmodels 1 quakeforge-common (>= 0.5.5)
-libQFsound 1 quakeforge-common (>= 0.5.5)
-libQFutil 1 quakeforge-common (>= 0.5.5)
