@@ -1,0 +1,26 @@
+usr/lib/libQFcd.*a
+usr/lib/libQFcd.so
+usr/lib/libQFconsole.*a
+usr/lib/libQFconsole.so
+usr/lib/libQFruamoko.*a
+usr/lib/libQFruamoko.so
+usr/lib/libQFgamecode.*a
+usr/lib/libQFgamecode.so
+usr/lib/libQFgamecode_builtins.*a
+usr/lib/libQFgamecode_builtins.so
+usr/lib/libQFgib.a
+usr/lib/libQFgib.so
+usr/lib/libQFimage.*a
+usr/lib/libQFimage.so
+usr/lib/libQFjs.*a
+usr/lib/libQFjs.so
+usr/lib/libQFmodels.*a
+usr/lib/libQFmodels.so
+usr/lib/libQFsound.*a
+usr/lib/libQFsound.so
+usr/lib/libQFutil.*a
+usr/lib/libQFutil.so
+usr/lib/pkgconfig/quakeforge.pc
+usr/include/QF/GL/*.h
+usr/include/QF/plugin/*.h
+usr/include/QF/*.h
