@@ -1,0 +1,2 @@
+usr/games/nq-glx
+usr/games/qw-client-glx
