@@ -1,0 +1,2 @@
+usr/lib/libQFmodels_gl.so.*
+usr/lib/libQFrenderer_gl.so.*
