@@ -1,2 +1,0 @@
-libQFrenderer_gl 1 quakeforge-libs-gl (>= 0.5.5)
-libQFmodels_gl 1 quakeforge-libs-gl (>= 0.5.5)
