@@ -1,0 +1,2 @@
+usr/lib/libQFmodels_sw.so.*
+#usr/lib/libQFrenderer_sw.so.*
