@@ -1,2 +1,0 @@
-libQFrenderer_sw 1 quakeforge-libs-sw (>= 0.5.5)
-libQFmodels_sw 1 quakeforge-libs-sw (>= 0.5.5)
