@@ -1,0 +1,5 @@
+usr/bin/qfbsp
+usr/bin/qflight
+usr/bin/qfvis
+usr/share/man/man1/qflight.1
+usr/share/man/man1/qfvis.1
