@@ -1,0 +1,4 @@
+usr/games/nq-sdl
+usr/games/qw-client-sdl
+usr/lib/quakeforge/plugins/cd_sdl.so*
+usr/lib/quakeforge/plugins/snd_output_sdl.so*
