@@ -1,0 +1,4 @@
+usr/games/qw-master
+usr/games/qw-server
+usr/games/nq-server
+usr/lib/quakeforge/plugins/console_server.so*
