@@ -1,0 +1,2 @@
+usr/games/nq-sgl
+usr/games/qw-client-sgl
