@@ -1,0 +1,6 @@
+usr/bin/pak
+usr/bin/wad
+usr/bin/zpak
+usr/bin/qfwavinfo
+usr/share/man/man1/pak.1
+usr/share/man/man1/wad.1
