@@ -1,0 +1,2 @@
+usr/games/nq-x11
+usr/games/qw-client-x11
