@@ -1,3 +1,9 @@
+quakeforge (0.6.0~git20101223-0) frozen unstable; urgency=low
+
+  * Getting ready for 0.6.0 release.
+
+ -- Jeff Teunissen <deek@d2dc.net>  Thu, 24 Dec 2010 19:39:37 -0400
+
 quakeforge (0.5.5-0cvs20040727) frozen unstable; urgency=low
 
   * CVS snapshot.
